# cambia

./: .gitignore  .python-version  MATCHMAKING.md  Makefile  README.md  RULES.md  docker-compose.staging.yml  go.work
cfr/: .gitignore  README.md  config.yaml  diagnose_escher.py  pyproject.toml  requirements.txt  run_ppo_diagnostic.py  validation_runner.py
cfr/benchmarks/baseline/: train_network_micro.py
cfr/config/: bench_concurrent.yaml  deep_train.yaml  desca_phase1_apcfr.yaml  desca_phase1_apcfr_mild.yaml  desca_phase1_base.yaml  desca_phase1_rmplus.yaml  desca_smoke_apcfr.yaml  desca_smoke_apcfr_mild.yaml  desca_smoke_base.yaml  desca_smoke_rmplus.yaml  go_train.yaml  gtcfr_train.yaml  harness-spec.example.yaml  harness.example.yaml  ppo_encoding_v2.yaml  production_train.yaml  prtcfr_production.yaml  rebel_train.yaml  sog_train.yaml  sog_v4_train.yaml  sys_bench.yaml  tiny_2card_plateau.yaml  tiny_cambia_desca.yaml  tiny_cambia_tabular.yaml  tiny_norecall.yaml  v0.4-e2-ppo-selfplay.yaml  x2_tiny_gate.yaml
cfr/config/harness/: v10-x2-ext-xpu.yaml  v10b-x2-fresh-1000.yaml  v4-parity-eval-cpu.yaml  v4-parity-eval-xpu.yaml  v5-cpu-probe-train.yaml  v5-xpu-probe-train.yaml  x2r-c0.yaml  x2r-c1.yaml  x2r-confirm-s2.yaml  x2r-confirm-s3.yaml  x4-meanimp-eval.yaml  x4-pilot-train.yaml  x5-exploitability-eval.yaml  x5-full-train.yaml  x5-meanimp-eval.yaml
cfr/config/rule_profiles/: competitive.yaml  default.yaml
cfr/config/x2r/: c0.yaml  c1.yaml  c_rep.yaml  confirm_s2.yaml  confirm_s3.yaml
cfr/docs/: architecture.md  baselines.md  config.md  convergence.md  deep_cfr_modules.md  definitions.md  eval_protocol.md  exploitability.md  rebel_benchmark_results.json  rebel_benchmark_results.md  sampling.md
cfr/runs/reference/: baseline_exploitability.json
cfr/scripts/: aggregate_evals.py  backfill_db.py  backfill_imported_checkpoints.py  baseline_tournament.py  batch_eval_new_baselines.py  benchmark_concurrent.py  collect_metrics.py  diag_advantage_dist.py  diag_advantage_quality.py  diag_checkpoint_progression.py  diag_game_behavior.py  diag_random_init.py  e34_driver.py  ema_parity_test.py  ema_vs_snapshot_eval.py  eval_watcher.py  h3_diagnostic.py  kl_divergence.py  launch_production.sh  plot_metrics.py  prtcfr_baseline_exploitability.py  prtcfr_bench.py  prtcfr_infer_microbench.py  prtcfr_mixture_exploitability.py  prtcfr_p100_instrument.py  prtcfr_token_dist.py  prtcfr_x2_verdict.py  prtcfr_x4_verdict.py  prtcfr_x5_verdict.py  r0_ema_vs_raw_eval.py  rebel_benchmark.py  reeval_checkpoints.py  training_load_monitor.sh
cfr/src/: action_abstraction.py  agent_state.py  analysis_tools.py  card.py  circuit.py  cli.py  config.py  constants.py  desca_networks.py  disk_reservoir.py  encoding.py  evaluate_agents.py  live_display.py  log_archiver.py  main_train.py  networks.py  pbs.py  persistence.py  play.py  ppo_env.py  ppo_train.py  reservoir.py  run_db.py  sequence_encoding.py  serial_rotating_handler.py  tournament.py
cfr/src/agents/: baseline_agents.py
cfr/src/benchmarks/: __init__.py  desca_bench.py  e2e_bench.py  es_bench.py  memory_bench.py  network_bench.py  runner.py
cfr/src/cfr/: data_manager_mixin.py  deep_trainer.py  deep_worker.py  desca_trainer.py  desca_worker.py  es_validator.py  gpu_safety.py  gtcfr_search.py  gtcfr_trainer.py  gtcfr_worker.py  ismcts_br.py  lbr.py  omniscient.py  prtcfr_battery.py  prtcfr_critic.py  prtcfr_eval.py  prtcfr_infer.py  prtcfr_infer_instrument.py  prtcfr_mixture.py  prtcfr_net.py  prtcfr_stability.py  prtcfr_trainer.py  prtcfr_worker.py  psro.py  range_utils.py  rebel_trainer.py  rebel_worker.py  sampled_lbr.py  sog_search.py  sog_trainer.py  sog_worker.py  training_loop_mixin.py  worker.py
cfr/src/ffi/: __init__.py  bridge.py
cfr/src/game/: _ability_mixin.py  _query_mixin.py  _snap_mixin.py  (+1 more)
cfr/tests/: conftest.py  harness_tls_util.py  micro_game.py  test_action_abstraction.py  test_action_abstraction_info_flow.py  test_agent_state_parity.py  test_b3_representation_gate.py  test_backfill_imported_checkpoints.py  test_baseline_agent_hashseed_determinism.py  test_baseline_agents.py  test_baseline_behavior.py  test_checkpoint_hardening.py  test_circuit.py  test_circuit_cross_validation.py  test_config_render_validate.py  test_config_validation.py  test_cross_engine_samples.py  test_cross_validation.py  test_cvpn_detach.py  test_deep_worker_go.py  test_deep_worker_os.py  test_depth_cap.py  test_desca_cli.py  test_desca_convergence.py  test_desca_env_factory_omniscient.py  test_desca_go_adapter_parity.py  test_desca_networks.py  test_desca_perf_wins.py  test_desca_trainer.py  test_deterministic_eval.py  test_device_config.py  test_discard_ability_from_discard_pile.py  test_disk_reservoir.py  test_eight_players.py  test_encoder_eval_parity.py  test_encoding.py  test_encoding_v2.py  test_eppbs_encoding.py  test_eppbs_integration.py  test_es_validator.py  (+113 more)
cfr/tools/: __init__.py  belief_greedy_probe.py  measure_uniform_nashconv.py  tiny_exact.py  tiny_exploit.py  tiny_probe.py  tiny_solver.py
(+461 files in other folders)
