[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cambia-cfr"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6",
    "numpy>=2.0",
    "cffi>=2.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "joblib>=1.3",
    "tqdm>=4.65",
    "psutil>=5.9",
    "rich>=13.0",
    "typer[all]>=0.9",
]

[project.optional-dependencies]
rl = ["gymnasium>=1.0", "stable-baselines3>=2.4", "sb3-contrib>=2.4"]

[project.scripts]
cambia = "src.cli:app"

[tool.setuptools.packages.find]
include = ["src", "src.*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:GoEngine\\(\\) without house_rules:DeprecationWarning",
]
markers = [
    "integration: slow end-to-end tests requiring libcambia.so (>10s)",
]

[tool.black]
target-version = ['py313']
line-length = 90
