[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cambia-cfr"
version = "0.4.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "cffi>=2.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "joblib>=1.3",
    "tqdm>=4.65",
    "psutil>=5.9",
    "rich>=13.0",
    "typer[all]>=0.9",
]

[project.optional-dependencies]
cpu = ["torch>=2.6"]
gpu = ["torch>=2.6"]
# torch>=2.10 (not the shared >=2.6 floor other extras use): the xpu wheel
# build depends on Intel's triton fork under an exact-version pin that
# changed name from pytorch-triton-xpu to triton-xpu at torch 2.10; pinning
# the floor there keeps resolution on the current name instead of walking
# back through releases that need the retired package name too.
xpu = ["torch>=2.10", "triton-xpu"]
rl = ["gymnasium>=1.0", "stable-baselines3>=2.4", "sb3-contrib>=2.4"]
# Client-side serving-harness CLI + pull/reconcile loop (cambia-256). Kept out of
# the base deps: only the `cambia harness` subcommand and the pull loop import
# these, and a training host never needs them.
harness = ["websockets>=13.0", "pyjwt>=2.8", "cryptography>=42.0"]
dev = ["black==26.5.1"]

[project.scripts]
cambia = "src.cli:app"

[tool.setuptools.packages.find]
include = ["src", "src.*"]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
        { extra = "xpu" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "gpu" },
    { index = "pytorch-xpu", extra = "xpu" },
]
# torch's xpu build pulls in Intel's triton fork, published only on this
# index (not PyPI); `tool.uv.sources` only routes packages declared as direct
# extra dependencies (see the `xpu` extra above), not arbitrary transitive
# ones, so triton-xpu needs the same explicit routing torch gets.
triton-xpu = [{ index = "pytorch-xpu", extra = "xpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:GoEngine\\(\\) without house_rules:DeprecationWarning",
]
addopts = "-m 'not slow'"
markers = [
    "integration: slow end-to-end tests requiring libcambia.so (>10s)",
    "slow: tests that run >30s (convergence, large eval loops); excluded from default CI run",
]

[tool.black]
target-version = ['py313']
line-length = 90
